# Solar-Game-of-Life

./: .gitignore  CMakeLists.txt  Makefile  README.md  frame.f3d  frame.stl  sdkconfig
components/CalEPD/: CMakeLists.txt
main/: CMakeLists.txt  component.mk  main.cpp
main/ulp/: adc.S
